# MultilinearMDL

./: CMakeLists.txt  ConfigureITK.cmake  README.md
Example/: FileCollection.txt  Id_1_Exp1.off  Id_1_Exp2.off  Id_1_Exp3.off  Id_2_Exp1.off  Id_2_Exp2.off  Id_2_Exp3.off  Id_3_Exp1.off  Id_3_Exp2.off  Id_3_Exp3.off  Id_4_Exp1.off  Id_4_Exp2.off  Id_4_Exp3.off  InnerBoundaryIndices.txt  OuterBoundaryIndices.txt  RunMM_MDL.cmd  TextureCoordinates.txt
MultilinearMDL/: CMakeLists.txt  DataContainer.h  Definitions.h  FileLoader.cpp  FileLoader.h  FileWriter.cpp  FileWriter.h  MDLHelper.cpp  MDLHelper.h  MDLShapeCostFunction.cpp  MDLShapeCostFunction.h  MDLShapeCostFunctionPCA.cpp  MDLShapeCostFunctionPCA.h  Main.cpp  MathHelper.cpp  MathHelper.h  MultilinearModel.cpp  MultilinearModel.h  PerformanceCounter.cpp  PerformanceCounter.h  VectorNX.h
